--- a/README
+++ b/README
@@ -54,7 +54,7 @@ This is my personal developer portfolio website, built to professionally present
 🚀 Getting Started
 
 ```bash
-# Clone https://github.com/farhanbaber/My-portfolio/edit/main/READM
+# Clone  https://farhanbaber.github.io/My-portfolio/
 
 # If using React (skip if plain HTML/CSS)
 npm install
